# SDLDemo

./: CMakeLists.txt  README.md
assets/descriptors/: demo_scene.xml  gameObjects.xml
docs/: plans.md  structure.md
src/: CMakeLists.txt  main.cpp
src/Code/: code.cpp  code.hpp
src/Game/: Game.cpp  Game.hpp  GameData.cpp  GameData.hpp
src/GameObjects/: Background.cpp  Background.hpp  GameObject.hpp  GameObjectCreator.hpp  Player.cpp  Player.hpp  Trap.cpp  Trap.hpp  gameObjectUtils.hpp
src/Parser/: Parser.hpp  ParserXML.cpp  parseUtils.cpp  parseUtils.hpp
src/Scene/: Scene.hpp  SceneCreator.hpp  SceneLoader.hpp  SceneLoaderSDL.cpp  SceneLoaderSDLExit.cpp  SceneLoaderSDLGame.cpp  SceneManager.hpp  SceneManagerSDLSimple.cpp  SceneSDLGame.cpp  sceneUtils.hpp
src/render/: RenderCtx.cpp  RenderCtx.hpp  Renderer.hpp  RendererCreator.hpp  RendererCreatorSDL.cpp  RendererSDLGame.cpp  Sprite.cpp  Sprite.hpp  renderUtils.hpp
src/util/: FileUtils.cpp  FileUtils.hpp  SDLUtils.cpp  SDLUtils.hpp  Vector.cpp  Vector.hpp
test/: CMakeLists.txt  dummyTest.cpp
test/Code/: codeTest.cpp
test/resources/: sprites.xml
